frontend/test/should_fail/no_match_in_node.grg
using no_match_in_node;

test t
{
	n:N --> n;
}
